// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useFetchLatestForOS > binary URL is set correctly 1`] = `
{
  "checksum": "sha256sum_mock",
  "extension": "gz",
  "link": "https://link_mock",
  "release_name": "release_name_mock",
  "size": 0,
  "type": "type_mock",
}
`;

exports[`useFetchLatestForOS > installer is returned if available 1`] = `
{
  "checksum": "installer_sha256sum_mock",
  "extension": "gz",
  "link": "https://installer_link_mock",
  "release_name": "release_name_mock",
  "size": 0,
  "type": "type_mock",
}
`;
